--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -21,82 +21,181 @@
 {% block content %}
     <!-- Section-->
     <section class="container p-0">
-        <div class="row">
-          <div class="col-xl-8">
-            <div class="card">
-              <div class="card-body">
-              Checkout Form Goes Here
-              </div>
-            </div>
-  
-      
-          <div class="col-xl-4">
-            <div class="card checkout-order-summary">
-              <div class="card-body">
-                <div class="p-3 bg-light mb-3">
-                  <h5 class="font-size-16 mb-0">
-                    Order Summary <span class="float-end ms-2">({{ product_count }})</span>
-                  </h5>
-                </div>
-                {% for item in cart_items %}
-
-                <div class="card border-0 my-2">
-                  <div class="row">
-                    <div class="col-3 p-0">
-                      {% if item.product.image.url %}
-                      <img class="avatar-lg"  src="{{item.product.image.url}}" style='object-fit: cover;' />
-                      {% else %}
-                      <img class="avatar-lg bg-{{item.product.color}}"   alt="product image"  src="{% static "images/award-placeholder.webp" %}" style='object-fit: cover;' />
-                      {% endif %}
+      <div class="row">
+        <div class="col-xl-8">
+          <div class="card">
+            <div class="card-body">
+              <form action="{% url 'checkout' %}" method="POST" id="payment-form">
+                {% csrf_token %}
+                <ol class="activity-checkout mb-0 px-4 mt-3">
+                  <li class="checkout-item">
+                    <div class="avatar checkout-icon p-1">
+                      <div class="avatar-title rounded-circle bg-primary">
+                        <i class="fa-solid fa-user"></i>
+                      </div>
                     </div>
-                    <div class="col-6">
-                      <div class="row d-flex">
-                        <p class='small'>{{ item.product.name }}
+                    <div class="feed-item-list">
+                      <div>
+                        <h5 class="font-size-16 mb-1">User Info</h5>
+                        <p class="text-muted mb-4">
+                          Changing username/email will only affect this order
+                        </p>
+                        <div class="mb-3">
+                            <div>
+                              <div class="row">
+                                <div class="col-lg-4">
+                                  <div class="mb-3">
+                                    {{ order_form.full_name | as_crispy_field }}
+                                  </div>
+                                </div>
+                                <div class="col-lg-4">
+                                  <div class="mb-3">
+                                    {{ order_form.email | as_crispy_field }}
+                                  </div>
+                                </div>
+                                <div class="col-lg-4">
+                                  <div class="mb-3">
+                                    {{ order_form.phone_number | as_crispy_field }}
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                        </div>
+                      </div>
+                    </div>
+                  </li>
+                  <li class="checkout-item">
+                    <div class="avatar checkout-icon p-1">
+                      <div class="avatar-title rounded-circle bg-primary">
+                        <i class="fa-solid fa-truck text-white"></i>
+                      </div>
+                    </div>
+                    <div class="feed-item-list mb-3">
+                      {{ order_form.street_address1 | as_crispy_field }}
+
+                      {{ order_form.street_address2 | as_crispy_field }}
+
+                      {{ order_form.town_or_city | as_crispy_field }}
+
+                      {{ order_form.county | as_crispy_field }}
+
+                      {{ order_form.postcode | as_crispy_field }}
+
+                      {{ order_form.country | as_crispy_field }}
+
+                      <div
+                        class="form-check form-check-inline float-right mt-3"
+                      >
+                      {% if user.is_authenticated %}
+                      <label class="form-check-label" for="id-save-info">Save this delivery information to my profile</label>
+                       <input class="form-check-input ml-2 mr-0" type="checkbox" id="id-save-info" name="save-info" checked>
+                    {% else %}
+                      <label class="form-check-label" for="id-save-info">
+                       <a class="text-info" href="{% url 'account_signup' %}">Create an account</a> or 
+                      <a class="text-info" href="{% url 'account_login' %}">login</a> to save this information
+                      </label>
+                    {% endif %}
+                      </div>
+                    </div>
+                  </li>
+                  <li class="checkout-item">
+                    <div class="avatar checkout-icon p-1">
+                      <div class="avatar-title rounded-circle bg-primary">
+                        <i class="fa-solid fa-wallet"></i>
+                      </div>
+                    </div>
+                    <div class="feed-item-list">
+                      <div>
+                        <h5 class="font-size-16 mb-1">Payment Info</h5>
+                        <p class="text-muted text-truncate mb-4">
+                          Enter your payment details
                         </p>
                       </div>
-                      <div class="row d-flex">
-                        <p class="text-muted small">Quantity {{item.quantity}}</p>
-                      </div>
                     </div>
-                    <div class="col-3 d-flex justify-content-end">
-                      <p class='fw-bold'>
-                        {% if item.product.discount %}
-                        <span class='text-decoration-line-through text-danger'>${{ item.product.price | calc_subtotal:item.quantity }}</span>
-                        {% endif %}
-                        ${{ item.product.total_final_price | calc_subtotal:item.quantity }}</p>
-
-                        
-                    </div>
+           
+                  </li>
+                </ol>
+                <div class="row my-4">
+                  <div class="col">
+                    <a href="{% url "products" %}">
+                      <i class="fas fa-arrow-left mr-2"></i> Continue Shopping</a
+                    >
                   </div>
-                  {% endfor %}
-
-
-                  <hr />
-                  <div class="row mb-2">
-                    <div class="col"><b> Shipping/Admin Charge:</b></div>
-                    <div class="col-auto d-flex justify-content-end"><b>$5</b></div>
-                  </div>
-                  <div class="row mb-2">
-                    <div class="col"><b>Member Discounts:</b></div>
-                    <div class="col-auto d-flex justify-content-end">
-                      <b>$10</b>
+                  <div class="col">
+                    <div class="text-end mt-2 mt-sm-0">
+                      <button type='submit' href="#" class="btn btn-success">
+                         Pay Now
+                      </button>
                     </div>
                   </div>
-                  <div class="row mb-2">
-                    <div class="col"><b> Total:</b></div>
-                    <div class="col-auto d-flex justify-content-end"><b>${{ total | floatformat:2 }}</b></div>
+                </div>
+              </div>
+              </form>
+            </div>
+          </div>
+
+    
+        <div class="col-xl-4">
+          <div class="card checkout-order-summary">
+            <div class="card-body">
+              <div class="p-3 bg-light mb-3">
+                <h5 class="font-size-16 mb-0">
+                  Order Summary <span class="float-end ms-2">({{ product_count }})</span>
+                </h5>
+              </div>
+              {% for item in cart_items %}
+
+              <div class="card border-0 my-2">
+                <div class="row">
+                  <div class="col-3 p-0">
+                    {% if item.product.image.url %}
+                    <img class="avatar-lg"  src="{{item.product.image.url}}" style='object-fit: cover;' />
+                    {% else %}
+                    <img class="avatar-lg bg-{{item.product.color}}"   alt="product image"  src="{% static "images/award-placeholder.webp" %}" style='object-fit: cover;' />
+                    {% endif %}
                   </div>
+                  <div class="col-6">
+                    <div class="row d-flex">
+                      <p class='small'>{{ item.product.name }}
+                      </p>
+                    </div>
+                    <div class="row d-flex">
+                      <p class="text-muted small">Quantity {{item.quantity}}</p>
+                    </div>
+                  </div>
+                  <div class="col-3 d-flex justify-content-end">
+                    <p class='fw-bold'>
+                      {% if item.product.discount %}
+                      <span class='text-decoration-line-through text-danger'>${{ item.product.price | calc_subtotal:item.quantity }}</span>
+                      {% endif %}
+                      ${{ item.product.total_final_price | calc_subtotal:item.quantity }}</p>
+
+                      
+                  </div>
+                </div>
+                {% endfor %}
+
+
+                <hr />
+                <div class="row mb-2">
+                  <div class="col"><b> Shipping/Admin Charge:</b></div>
+                  <div class="col-auto d-flex justify-content-end"><b>$5</b></div>
+                </div>
+                <div class="row mb-2">
+                  <div class="col"><b>Member Discounts:</b></div>
+                  <div class="col-auto d-flex justify-content-end">
+                    <b>$0</b>
+                  </div>
+                </div>
+                <div class="row mb-2">
+                  <div class="col"><b> Total:</b></div>
+                  <div class="col-auto d-flex justify-content-end"><b>${{ total | floatformat:2 }}</b></div>
                 </div>
               </div>
             </div>
           </div>
         </div>
-    </section>
+      </div>
+  </section>
 {% endblock %}
 
- {% block postloadjs %}
-    {{ block.super }}
-    {{ stripe_public_key|json_script:"id_stripe_public_key" }}
-    {{ client_secret|json_script:"id_client_secret" }}
-    <script src="{% static 'checkout/js/stripe_elements.js' %}"></script>
-{% endblock %}
