--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -61,7 +61,7 @@
             <hr />
             <div class='p-2'>
             <div class="text-right px-0">
-              <a href="#" class="btn btn-primary mb-4 btn-lg"
+              <a href="{% url "checkout" %}" class="btn btn-primary mb-4 btn-lg"
                 >Checkout</a
               >
             </div>
