--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -192,12 +192,12 @@
                 <hr />
                 <div class="row mb-2">
                   <div class="col"><b> Shipping/Admin Charge:</b></div>
-                  <div class="col-auto d-flex justify-content-end"><b>$5</b></div>
+                  <div class="col-auto d-flex justify-content-end"><b>${{ delivery_cost|floatformat:2 }}</b></div>
                 </div>
                 <div class="row mb-2">
                   <div class="col"><b>Member Discounts:</b></div>
                   <div class="col-auto d-flex justify-content-end">
-                    <b>$0</b>
+                    <b>${{ discount }}</b>
                   </div>
                 </div>
                 <div class="row mb-2">
