--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -92,6 +92,44 @@
         </ol>
       </div>
     </div>
+
+    <div class="col-12 col-lg-6">
+      <p><strong>Order History</strong></p>
+      <p class="text-muted">Total Orders: {{orders|length}}</p>
+      <div class="order-history table-responsive">
+        <table class="table table-sm table-borderless">
+          <thead>
+            <tr>
+              <th>Order Number</th>
+              <th>Date</th>
+              <th>Items</th>
+              <th>Order Total</th>
+            </tr>
+          </thead>
+          <tbody>
+            {% for order in orders %}
+            <tr>
+              <td>
+                <a
+                  href="#"
+                  title="{{ order.order_number }}"
+                >
+                  {{ order.order_number|truncatechars:6 }}
+                </a>
+              </td>
+              <td>{{ order.date }}</td>
+              <td>
+                  <small class="small">
+                    x{{ order.total_items }} 
+                  </small>
+              </td>
+              <td>${{ order.grand_total }}</td>
+            </tr>
+            {% endfor %}
+          </tbody>
+        </table>
+      </div>
+    </div>
   </div>
   {% endblock %}
 </div>
