--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -14,7 +14,9 @@
 </div>
 {% endblock %} {% block content %}
 <div class="overlay"></div>
-<div class="container">
+
+
+<div class="container mb-5">
   <div class="row">
     <div class="col">
       <hr />
