--- a/profiles/static/profiles/css/profiles.css
+++ b/profiles/static/profiles/css/profiles.css
@@ -68,3 +68,15 @@
   padding: 0.33rem;
   border-radius: 100%;
 }
+
+/* COURSES CARD */
+.card-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.program-card:hover,
+.program-card:focus {
+  border: 1px solid #0275d8;
+}
