--- a/profiles/templates/profiles/my_courses.html
+++ b/profiles/templates/profiles/my_courses.html
@@ -1,7 +1,13 @@
 {% extends "base.html" %}
-<!--  -->
+
 {% load static %}
-<!--  -->
+
+{% block extra_css %}
+    <link rel="stylesheet" href="{% static 'profiles/css/profiles.css' %}">
+{% endblock %}
+
+
+{% load static %}
 {% block page_header %}
 <header class="bg-dark">
   <div class="container px-4 px-lg-5 my-5">
@@ -35,7 +41,7 @@
 
         {% for program in programs  %}
 
-        {% include "includes/program_card.html" with program=program %}
+        {% include "includes/my_courses_card.html" with program=program %}
 
         {% endfor %}
       </div>
