--- a/static/css/base.css
+++ b/static/css/base.css
@@ -264,6 +264,30 @@ a:link {
     -webkit-box-shadow 0.15s ease-in-out;
 }
 
+/* LOADING SPINNER */
+
+#loading-overlay {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: var(--orange);
+  z-index: 9999;
+}
+
+.loading-spinner {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0;
+  height: 100%;
+}
+.loading-spinner .icon i {
+  font-size: 5rem;
+}
+
 /* BOOTSTRAP TOASTS */
 
 .message-container {
