--- a/programs/templates/programs/program_detail.html
+++ b/programs/templates/programs/program_detail.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
+{% load embed_video_tags %}
 
 {% block page_header %}
 <header class="bg-dark">
@@ -161,6 +162,16 @@
       </div>
     </div>
   </section>
+
+    <!-- Enrolled Video Section -->
+    {% if purchased %}
+    <section class="bg-dark container pb-5">
+      <h2 class="text-light text-center p-5">{{program.name}}</h2>
+      <div class="mx-auto video-container">
+        {% video program.video_url '100% x 100%' %}
+      </div>
+    </section>
+    {% endif %}
 
 {% endblock %}
 
