--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -89,10 +89,10 @@
       <div class="container px-4 px-lg-5 mt-5">
         <h2 class="fw-bolder mb-4 text-center">Related products</h2>
         <div
-          class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center"
+          class="row gx-1 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center"
         >
         {% for related in related_products  %}
-        <div class="col mb-5">
+        <div class="col mb-4">
           <div class="card h-100">
             <!-- Sale badge-->
             {% if related.sale %}
@@ -115,7 +115,7 @@
                 </div>
                 <!-- Product price-->
                 {% if related.sale %}
-                <span class="text-decoration-line-through">${{related.price}}</span>
+                <span class="text-decoration-line-through text-danger">${{related.price}}</span>
                 <span><strong>${{related.total_final_price}}</strong></span>
                 {% else %}
                 <span><strong>${{related.price}}</strong></span>
